--- a/src/app/image-dashboard/image-dashboard/image-dashboard.component.html
+++ b/src/app/image-dashboard/image-dashboard/image-dashboard.component.html
@@ -1,4 +1,5 @@
-<h1>Upload some images!</h1>
-
-<app-image-upload></app-image-upload>
-<app-image-list></app-image-list>
+<div class="container mx-auto">
+  <h1>Upload some images!</h1>
+  <app-image-upload></app-image-upload>
+  <app-image-list></app-image-list>
+</div>
