--- a/src/app/image-dashboard/image-upload/image-upload.component.html
+++ b/src/app/image-dashboard/image-upload/image-upload.component.html
@@ -1,11 +1,11 @@
 <label class="image-upload-container btn btn-bwm">
-  <span>Select Image</span>
+  <span class="mr-2">Select Image</span>
   <input #imageInput
     type="file"
     accept="image/*"
     (change)="processFile(imageInput)">
     <ng-template [ngIf]="selectedFile">
-      <img src="{{ selectedFile.src }}" alt="">
+      <img class="rounded-lg image-preview" src="{{ selectedFile.src }}" alt="">
     </ng-template>
-    <input class="image-preview" type="submit" (click)="uploadImage(imageInput)">
+    <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit" (click)="uploadImage(imageInput)">
 </label>
