--- a/src/app/image-dashboard/image-dashboard/image-dashboard.component.html
+++ b/src/app/image-dashboard/image-dashboard/image-dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="container mx-auto">
+  <h1 class="my-12 header text-4xl tracking-wide font-serif">Imager</h1>
   <app-image-upload></app-image-upload>
   <app-image-list></app-image-list>
 </div>
